--- a/app.json
+++ b/app.json
@@ -27,6 +27,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "firebase": {
+        
+      }
     }
   }
 }
